--- a/views/chat.ejs
+++ b/views/chat.ejs
@@ -12,10 +12,11 @@
     <div class="open" style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776; open</div>
     <div id="player" style="pointer-events: none"></div>
     <div class="controls">
-      <button>Play</button>
-      <button>Pause</button>
-      <input id="slider" orient="vertical" type="range" min="0" max="100" value="0" step="1" oninput="changeVolume(this)" />
-      <input id="slider" type="range" min="0" max="100" value="0" step="1" oninput="changeTime(this)" />
+      <button id="playBtn">Play</button>
+      <button id="pauseBtn">Pause</button>
+      <input id="volume" orient="vertical" type="range" min="0" max="100" value="0" step="1"
+        oninput="changeVolume(this)" />
+      <input id="slider" type="range" min="0" max="100" value="0" step="1" oninput="changeTime(this)"/>
     </div>
   </div>
   <div id="mySidenav" class="sidenav">
@@ -25,25 +26,14 @@
     <a href="#">Clients</a>
     <a href="#">Contact</a>
   </div>
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"
+    integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
   <script src="https://www.youtube.com/iframe_api"></script>
   <script>
-    let player;
-    function onYouTubeIframeAPIReady() {
-      player = new YT.Player('player', {
-        height: '500px',
-        width: '100%',
-        videoId: 'W4vzZbAvyDY',
-        playerVars: {
-          autoplay: 0,
-          rel: 0,
-          modestbranding: 1,
-          controls: 1,
-          disablekb: 1,
-          enablejsapi:1,
-        },
-      });
-    }
+    //해당 룸의 유튜브 플레이어 표시
+    const rid = <%=room_id%>;
   </script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/3.1.3/socket.io.min.js"></script>  
   <script src="/javascripts/chat.js"></script>
 </body>
 
