--- a/public/stylesheets/chat.css
+++ b/public/stylesheets/chat.css
@@ -47,3 +47,8 @@ body {
     .sidenav {padding-top: 15px;}
     .sidenav a {font-size: 18px;}
   }
+
+  #slider{
+    display:block;
+    width:100%;
+  }
