--- a/views/chat.ejs
+++ b/views/chat.ejs
@@ -12,11 +12,12 @@
     <div class="open" style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776; open</div>
     <div id="player" style="pointer-events: none"></div>
     <div class="controls">
+      <input id="slider" type="range" min="0" max="100" value="0" step="1" oninput="changeTime(this)"/>
       <button id="playBtn">Play</button>
       <button id="pauseBtn">Pause</button>
+      <span id="volumeEmoji">🔊</span>
       <input id="volume" orient="vertical" type="range" min="0" max="100" value="0" step="1"
         oninput="changeVolume(this)" />
-      <input id="slider" type="range" min="0" max="100" value="0" step="1" oninput="changeTime(this)"/>
     </div>
   </div>
   <div id="mySidenav" class="sidenav">
