로그인 버튼

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -5,6 +5,19 @@
     <link rel='stylesheet' href='/stylesheets/login.css' />
   </head>
   <body>
-    login page
+    <div id="container">
+      <div>
+        <a href="/login/google">login with google</a>
+      </div>
+      <div>
+        <a href="/login/facebook">login with facebook</a>
+      </div>
+      <div>
+        <a href="/login/kakao">login with kakao</a>
+      </div>
+      <div>
+        <a href="/login/naver">login with naver</a>
+      </div>
+    </div>
   </body>
 </html>
