로그인, db 구조, 호스트 멤버 chat 화면 구분

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -5,7 +5,8 @@
     <link rel='stylesheet' href='/stylesheets/home.css' />
   </head>
   <body>
-  <div>펭수님 안녕하세요 <a href="/">로그아웃</a>
+  
+  <div> <%=name%> 님 안녕하세요 <a href="/login/logout">로그아웃</a>
 
     <button onclick="document.getElementById('id01').style.display='block'" style="width:auto;">플레이</button>
 
