--- a/views/home.ejs
+++ b/views/home.ejs
@@ -12,7 +12,7 @@
 
 <div id="id01" class="modal">
   <span onclick="document.getElementById('id01').style.display='none'" class="close" title="Close Modal">&times;</span>
-  <form class="modal-content" action="/create_room">
+  <form class="modal-content" action="/api/create_room">
     <div class="container">
       <h1>Sign Up</h1>
       <p>재생할 비디오의 url을 입력해 주세요</p>
