client-side 리팩토링. welcome LoginPage home 페이지수정

--- a/views/loginPage.ejs
+++ b/views/loginPage.ejs
@@ -5,19 +5,12 @@
     <link rel='stylesheet' href='/stylesheets/loginPage.css' />
   </head>
   <body>
-    <div id="container">
-      <div>
-        <a href="/login/google">login with google</a>
-      </div>
-      <div>
-        <a href="/login/facebook">login with facebook</a>
-      </div>
-      <div>
-        <a href="/login/kakao">login with kakao</a>
-      </div>
-      <div>
-        <a href="/login/naver">login with naver</a>
-      </div>
+    <a href="/"><img class="logo" src="images/logo.png" alg="logo"/></a>
+    <div class="container">
+      <a href="/login/google"><img src="images/login/google.png" alg="구글로 로그인하기"/></a>
+      <a href="/login/facebook"><img src="images/login/facebook.png" alg="페이스북으로 로그인하기"/></a>
+      <a href="/login/naver"><img src="images/login/naver.png" alg="네이버로 로그인하기"/></a>
+      <a href="/login/kakao"><img src="images/login/kakao.png" alg="카카오로 로그인하기"/></a>
     </div>
   </body>
 </html>
