--- a/views/welcome.ejs
+++ b/views/welcome.ejs
@@ -5,7 +5,8 @@
     <link rel='stylesheet' href='/stylesheets/welcome.css' />
   </head>
   <body>
-    <div>
+    <div class="container">
+      <img src="images/logo.png" alt="logo" width=300px>
       <a href="/loginPage">로그인하기</a>
     </div>
 
