--- a/public/stylesheets/home.css
+++ b/public/stylesheets/home.css
@@ -1,51 +1,62 @@
+* {box-sizing: border-box;} 
+
 body {
     background-color:rgba(0, 0, 0, 0.836);
     color:white;
+    display: inline-block;
   }
 
-  .rooms {
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-start;
-    flex-wrap: wrap;
-    /* 가로 길이만큼만 알맞게 원이 들어감 */
-    width: 96%;
-    margin: auto
-        /* 양쪽의 margin 값이 동등하도록? */
 
-}
+ header {
+     position: relative;
+     width:100%;
+     height:80px;
+  }
+  
+  .logo {
+     position: absolute;
+     top:20px;
+     left:30px;
+     width:150px;
+  }
+  
+  .nav {
+    position: absolute;
+    top:15px;
+    right:40px;
+  }
 
-.rooms >li {
-  width: 280px;
-  height: 150px;
-  display: block;
-  margin: 5px;
+  .logout{
+    background-color: #cc3f3f;
+  color:white;
+  padding:10px 12px;
+  border-radius: 6px;
+  text-decoration: none;
+  margin-top:25px;
+  }
 
-  background-size: cover;
-  /*이미지 전체 채우기*/
-  background-position: center;
+  .logout:hover {
+    background-color: brown;
+  }
 
+
+
+/* 플레이 팝업 */
+button {
+  background-color: #4CAF50;
   color: white;
-  font-size: 13px;
-  margin : 10px 3px;
+  font-size: 15px;
+  padding:12px 14px;
+  border-radius: 6px;
+  border: none;
+  cursor: pointer;
+  width: 100%;
 }
 
-.rooms img {
-  width: 280px;
-  height:130px;
+button:hover {
+  background-color:#3b8a3d;
 }
 
-.rooms div{
-  width:280px;
-  overflow: hidden;
-  white-space: nowrap;
-  text-overflow: ellipsis;
-}
-
-/* 팝업 */
-* {box-sizing: border-box;}
-
-/* Full-width input fields */
 input[type=text], input[type=password] {
   width: 100%;
   padding: 15px;
@@ -55,31 +66,14 @@ input[type=text], input[type=password] {
   background: #f1f1f1;
 }
 
-/* Add a background color when the inputs get focus */
+
 input[type=text]:focus, input[type=password]:focus {
   background-color: #ddd;
   outline: none;
 }
 
-/* Set a style for all buttons */
-button {
-  background-color: #4CAF50;
-  color: white;
-  padding: 14px 20px;
-  margin: 8px 0;
-  border: none;
-  cursor: pointer;
-  width: 100%;
-  opacity: 0.9;
-}
-
-button:hover {
-  opacity:1;
-}
-
-/* Extra styles for the cancel button */
 .cancelbtn {
-  padding: 14px 20px;
+  padding: 13px 20px;
   background-color: #f44336;
 }
 
@@ -112,9 +106,9 @@ button:hover {
 /* Modal Content/Box */
 .modal-content {
   background-color: #fefefe;
-  margin: 5% auto 15% auto; /* 5% from the top, 15% from the bottom and centered */
+  margin: 8% auto 15% auto; /* 5% from the top, 15% from the bottom and centered */
   border: 1px solid #888;
-  width: 80%; /* Could be more or less, depending on screen size */
+  width: 50%; /* Could be more or less, depending on screen size */
 }
 
 /* Style the horizontal ruler */
@@ -152,3 +146,43 @@ hr {
      width: 100%;
   }
 }
+
+  .rooms {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    flex-wrap: wrap;
+    width: 95%;
+    margin-left: 3%;
+    margin-right: 3%;
+
+
+}
+
+.rooms >li {
+  width: 280px;
+  height: 150px;
+  display: block;
+
+  background-size: cover;
+  background-position: center;
+
+  color: white;
+  font-size: 13px;
+  margin : 17px 5px;
+}
+
+.rooms img {
+  width: 280px;
+  height:130px;
+  border-radius: 6px;
+}
+
+.rooms div{
+  width:280px;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  padding:2px;
+}
+
