--- a/public/stylesheets/loginPage.css
+++ b/public/stylesheets/loginPage.css
@@ -1,14 +1,30 @@
 body {
-    background-color:rgba(0, 0, 0, 0.836);
+    margin:0;
+    height:100vh;
+    background-color:rgba(0, 0, 0, 0.836)
   }
 
-a{
-    color:white;
-    text-decoration: none;
-}
+  .logo{
+      width:150px;
+      position: absolute;
+      top:20px;
+      left:30px;
+  }
+  
+  .container{
+    height:100%;
+    display:flex;
+    flex-direction: column; 
+    justify-content: center;
+    align-items:center;
+  }
+  
+  .container img{
+      width:300px;
+      height:50px;
+      margin:5px;
+  }
 
-#container{
-    position: absolute;
-    left:45%;
-    top:45%;
-}
+
+  
+  
