--- a/public/stylesheets/welcome.css
+++ b/public/stylesheets/welcome.css
@@ -1,22 +1,25 @@
 body {
+  margin:0;
+  height:100vh;
   background-color:rgba(0, 0, 0, 0.836)
 }
 
-div{
-  background-color: #B9B9F5;
-  border-radius: 6px;
-  text-align: center;
-  width:200px;
-  padding:10px;
-  position: absolute;
-  left:40vw;
-  top:65vh;
+.container{
+  height:100%;
+  display:flex;
+  flex-direction: column; 
+  justify-content: center;
+  align-items:center;
 }
 
 a{
+  background-color: #cc3f3f;
   color:white;
+  padding:10px 20px;
+  border-radius: 10px;
   font-weight: bold;
   font-size: 24px;
   text-decoration: none;
+  margin-top:25px;
 }
 
