--- a/views/hostchat.ejs
+++ b/views/hostchat.ejs
@@ -8,20 +8,20 @@
 
 <body>
   <div id="main">
-    <a href="/home"> X 나가기</a>
-    <div class="open" style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776; open</div>
+    <a href="/home" class="leavechat">✖</a>
     <div id="player" style="pointer-events: none"></div>
     <div class="controls">
-      <input id="slider" type="range" min="0" max="100" value="0" step="1" oninput="changeTime(this)"/>
-      <button id="playBtn">Play</button>
-      <button id="pauseBtn">Pause</button>
+      <input id="slider" type="range" min="0" max="100" value="0" step="1"/>
+      <button id="playBtn">재생</button>
+      <button id="pauseBtn">일시정지</button>
       <span id="volumeEmoji">🔊</span>
       <input id="volume" orient="vertical" type="range" min="0" max="100" value="0" step="1"
         oninput="changeVolume(this)" />
+      <span class="chatopen">💬채팅열기</span>
     </div>
   </div>
   <div id="mySidenav" class="sidenav">
-    <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+    <a href="javascript:void(0)" class="closebtn">&times;</a>
     <ul id="messages"></ul>
     <form id="form" action="">
       <input id="input" autocomplete="off" /><button>Send</button>
