--- a/views/hostchat.ejs
+++ b/views/hostchat.ejs
@@ -15,13 +15,12 @@
       <button id="playBtn">재생</button>
       <button id="pauseBtn">일시정지</button>
       <span id="volumeEmoji">🔊</span>
-      <input id="volume" orient="vertical" type="range" min="0" max="100" value="0" step="1"
-        oninput="changeVolume(this)" />
+      <input id="volume" orient="vertical" type="range" min="0" max="100" value="0" step="1"/>
       <span class="chatopen">💬채팅열기</span>
     </div>
   </div>
   <div id="mySidenav" class="sidenav">
-    <a href="javascript:void(0)" class="closebtn">&times;</a>
+    <a href="javascript:void(0)" class="closebtn">&times;</a>        
     <ul id="messages"></ul>
     <form id="form" action="">
       <input id="input" autocomplete="off" /><button>Send</button>
@@ -29,9 +28,9 @@
   </div>
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"
     integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
-  <script src="https://www.youtube.com/iframe_api"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/3.1.3/socket.io.min.js"></script>  
   <script src="/javascripts/chat.js"></script>
+  <script src="https://www.youtube.com/iframe_api"></script>
 </body>
 
 </html>
