--- a/views/hostchat.ejs
+++ b/views/hostchat.ejs
@@ -7,6 +7,7 @@
 </head>
 
 <body>
+  <div id="name" hidden><%=name%></div>
   <div id="main">
     <a href="/home" class="leavechat">✖</a>
     <div id="player" style="pointer-events: none"></div>
