--- a/views/hostchat.ejs
+++ b/views/hostchat.ejs
@@ -16,7 +16,7 @@
       <button id="playBtn">재생</button>
       <button id="pauseBtn">일시정지</button>
       <span id="volumeEmoji">🔊</span>
-      <input id="volume" orient="vertical" type="range" min="0" max="100" value="0" step="1"/>
+      <input id="volume" orient="vertical" type="range" min="0" max="100" value="100" step="1"/>
       <span class="chatopen">💬채팅열기</span>
     </div>
   </div>
@@ -30,7 +30,7 @@
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"
     integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/3.1.3/socket.io.min.js"></script>  
-  <script src="/javascripts/chat.js"></script>
+  <script src="/javascripts/hostchat.js"></script>
   <script src="https://www.youtube.com/iframe_api"></script>
 </body>
 
