--- a/views/memberchat.ejs
+++ b/views/memberchat.ejs
@@ -7,19 +7,20 @@
 </head>
 
 <body>
+  <div id="name" hidden><%=name%></div>
   <div id="main">
-    <a href="/home"> X 나가기</a>
-    <div class="open" style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776; open</div>
+    <a href="/home" class="leavechat">✖</a>
     <div id="player" style="pointer-events: none"></div>
     <div class="controls">
-      <input id="slider" type="range" min="0" max="100" value="0" step="1" oninput="changeTime(this)"/>
+      <input id="slider" class="memberslider" type="range" min="0" max="100" value="0" step="1"/>
       <span id="volumeEmoji">🔊</span>
-      <input id="volume" orient="vertical" type="range" min="0" max="100" value="0" step="1"
-        oninput="changeVolume(this)" />
+      <input id="volume" orient="vertical" type="range" min="0" max="100" value="100" step="1"/>
+      <span class="chatopen">💬채팅열기</span>
     </div>
   </div>
   <div id="mySidenav" class="sidenav">
-    <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+    <div id="warn">재생 컨트롤은 호스트만 할 수 있습니다.</div>
+    <a href="javascript:void(0)" class="closebtn">&times;</a>        
     <ul id="messages"></ul>
     <form id="form" action="">
       <input id="input" autocomplete="off" /><button>Send</button>
@@ -27,9 +28,9 @@
   </div>
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"
     integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
-  <script src="https://www.youtube.com/iframe_api"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/3.1.3/socket.io.min.js"></script>  
-  <script src="/javascripts/chat.js"></script>
+  <script src="/javascripts/memberchat.js"></script>
+  <script src="https://www.youtube.com/iframe_api"></script>
 </body>
 
 </html>
